--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "basil.js": "^0.4.3",
     "brfs": "^1.4.3",
     "ejs": "^2.4.1",
-    "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-watch": "^0.6.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^1.3.2"
   }
 }
